# finance

./: .gitignore  Dockerfile  README.md  pyproject.toml
finance/: .gcloudignore  finance.py  main.py
finance/banking_handlers/: nubank.py
finance/gspread_handler/: gspread_handler.py
